variables.Variables.scala.error
Compilation error:
Variables:8: error: not found: value compteur
while (compteur!=retour) {
       ^