variables.Variables.scala.code
val pas: Int=0;
while (isOverBaggle()==false) {
  forward();
  val compteur:Int=pas+1;
}
pickupBaggle()
val retour: Int=0;
while (compteur!=retour) {
  backward();
}